--- a/css/style.css
+++ b/css/style.css
@@ -4,13 +4,14 @@
 }
 
 body {
-    background-color: #090909;
+    border: 1px solid black;
+    height: 100vh;
+    background-color: #ff33ee;
 }
 
 .container {
     display: flex;
     flex-direction: column;
-    grid-template-columns: repeat(4, 1fr);
     justify-content: center;
     align-items: center;
 }
@@ -43,4 +44,11 @@ body {
     100% {
         background-position: 0% 50%;
     }
+}
+
+.launchpad {
+    text-align: center;
+    font-size: 5rem;
+    margin-bottom: 20px;
+    color: #ffffff;
 }
