--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Jersey+10&display=swap');
+
 * {
     margin: 0px;
     padding: 0px;
@@ -49,6 +51,7 @@ body {
 .launchpad {
     text-align: center;
     font-size: 5rem;
-    margin-bottom: 20px;
+    margin: 25px 0px;
     color: #ffffff;
+    font-family: "Jersey 10", sans-serif;
 }
